# USHCN-temperatures

./: .gitignore  404.html  README.md  index.html  macros.py  mkdocs.yml  notes.md  pyproject.toml
contact/: index.html
data_sources/: index.html
docs/: contact.md  data_sources.md  index.md  installation.md
docs/plots/: are_heatwaves_increasing.md  are_hotter_days_increasing.md  daily_observations_falling.md
installation/: index.html
installation/downloader/: index.html
installation/scripts/: index.html
plots/are_heatwaves_increasing/: index.html
plots/are_hotter_days_increasing/: index.html
plots/daily_observations_falling/: index.html
python_ushcn/: __init__.py
python_ushcn/daily/: deserialise.py
python_ushcn/plots/: all_temps.py  are_heatwaves_increasing.py  are_hotter_days_increasing.py  are_observations_falling.py  max_temps.py
python_ushcn/utils/: benchmark.py  data.py  inspect.py  parse_stations.py  paths.py  plots.py  process_data.py  process_stations.py  updater.py
search/: search_index.json
tests/: test_daily_weather_data.py  test_stations.py  test_weatherdata.py
